# hello-erc20

erc_20/: hardhat.config.ts  networks-testnet.json  package.json  solana.bash
erc_20/contracts/: HelloERC20.sol
erc_20/tasks/: bridge-token-solana.ts  bridge-token.ts  configure.ts  configureSolana.ts  parseSolanaAddress.ts
scripts/: Cargo.toml  chains.json  configure_client.sh  create_token.sh  set_external_signer.sh
scripts/src/: configure_client.rs  create_token_config.rs  set_external_signer.rs  utils.rs
spl_token/: .env.example  .gitignore  Cargo.toml  Readme.md  deploy.sh  script.sh
spl_token/scripts/: configure_client.rs  utils.rs
spl_token/src/: constants.rs  entrypoint.rs  lib.rs  state.rs  utils.rs
spl_token/src/instructions/: mod.rs
spl_token/src/processor/: mod.rs  process_create_token.rs  process_initialize_extra_account_meta_list.rs  process_process_message.rs  process_update_extra_meta_list.rs
