[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk={version="1.17.1"}
solana-client="1.17.1"
borsh="0.10"
spl-tlv-account-resolution = "0.5.1"
hello_token={path="../spl_token"}
mv3_contract_solana={git="https://github.com/goran9999/cryptolink_solana.git",sub="programs/mv3_contract_solana",features=["no-entrypoint"]}
solana-program = "1.17.1"
serde = "1.0.198"
spl-token="3.5.0"
hex = "0.4.3"
ethers="0.1.3"
serde_json = "1.0.116"
dotenv = "0.15.0"
message_hook={git="https://github.com/goran9999/cryptolink_solana.git",sub="interface"}


[[bin]]
name="configure_client"
path="src/configure_client.rs"

[[bin]]
name="create_token_config"
path="src/create_token_config.rs"

[[bin]]
name="set_exsig"
path="src/set_external_signer.rs"